EntityFramework sql og tools

--- a/NaturePlanetSolutionCore/appsettings.json
+++ b/NaturePlanetSolutionCore/appsettings.json
@@ -5,5 +5,10 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+}
+{
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=192.168,1433;Database=NaturePlanet;User ID=sa;Password"
+  }
 }
