--- a/.gitignore
+++ b/.gitignore
@@ -21,3 +21,7 @@ Migrations/
 # OS filer
 .DS_Store
 Thumbs.db
+
+# Ignorer AssemblyInfo-filer genereret af build
+**/obj/**/AssemblyInfo.*
+**/obj/**/AssemblyInfoInputs.cache
