--- a/NaturePlanetSolutionCore/appsettings.json
+++ b/NaturePlanetSolutionCore/appsettings.json
@@ -6,9 +6,7 @@
     }
   },
   "AllowedHosts": "*",
-}
-{
   "ConnectionStrings": {
-    "DefaultConnection": "Server=192.168,1433;Database=NaturePlanet;User ID=sa;Password"
+    "DefaultConnection": "Data Source=10.10.132.118,1433;Initial Catalog=NaturePlanet;User ID=sa;Password=12345;TrustServerCertificate=True;"
   }
 }
