--- a/NaturePlanetSolutionCore/appsettings.json
+++ b/NaturePlanetSolutionCore/appsettings.json
@@ -7,6 +7,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DefaultConnection": "Data Source=10.10.132.118,1433;Initial Catalog=NaturePlanet;User ID=sa;Password=12345;TrustServerCertificate=True;"
+    "DefaultConnection": "Server=tcp:10.10.132.118,1433;Database=NaturePlanet;User Id=sa;Password=12345;TrustServerCertificate=True;"
   }
 }
