--- a/NaturePlanetSolutionCore/NaturePlanetSolutionCore.csproj
+++ b/NaturePlanetSolutionCore/NaturePlanetSolutionCore.csproj
@@ -6,4 +6,10 @@
         <ImplicitUsings>enable</ImplicitUsings>
     </PropertyGroup>
 
+    <ItemGroup>
+      <ProjectReference Include="..\Business\Business.csproj" />
+      <ProjectReference Include="..\DataAccessLayer\DataAccessLayer.csproj" />
+      <ProjectReference Include="..\DataTransferLayer\DataTransferLayer.csproj" />
+    </ItemGroup>
+
 </Project>
