--- a/NaturePlanetSolutionCore/NaturePlanetSolutionCore.csproj
+++ b/NaturePlanetSolutionCore/NaturePlanetSolutionCore.csproj
@@ -12,4 +12,8 @@
       <ProjectReference Include="..\DataTransferLayer\DataTransferLayer.csproj" />
     </ItemGroup>
 
+    <ItemGroup>
+      <None Include="wwwroot\Assets\Images\NaturePlanet_logo.svg" />
+    </ItemGroup>
+
 </Project>
