--- a/Business/Business.csproj
+++ b/Business/Business.csproj
@@ -13,6 +13,9 @@
 
     <ItemGroup>
         <PackageReference Include="Microsoft.AspNetCore.Components.Web" Version="9.0.10" />
+        <PackageReference Include="Microsoft.AspNetCore.Http" Version="2.3.0" />
+        <PackageReference Include="Microsoft.AspNetCore.Http.Abstractions" Version="2.3.0" />
+        <PackageReference Include="Microsoft.AspNetCore.Http.Extensions" Version="2.3.0" />
         <PackageReference Include="System.Collections.NonGeneric" Version="4.3.0" />
     </ItemGroup>
 
